--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ tqdm>=4.66
 scikit-learn>=1.3
 rich>=13.7          # pretty CLI output & progress logging
 click>=8.1          # optional: nicer argument parsing
+jsonargparse==4.34.0   # YAML/CLI parsing exactly as in NoLiMa
+tenacity==9.0.0        # retry/back-off helper
 
 # ─────────────── dataset generation (synthetic benchmark) ──────────
 faker>=24.9         # random names, dates, etc. for implicit facts
@@ -24,14 +26,7 @@ langchain>=0.1.0            # LC JSON prompt schema + orchestration
 transformers>=4.40
 torch>=2.0
 tiktoken>=0.7               # fast GPT token counting
+vllm>=0.4.2                 # local vLLM (in-process)
 
 # ────────────────────────── reporting utils ────────────────────────
 tabulate>=0.9               # pretty tables in reports
-
-# ────────────────────────── dev / testing ──────────────────────────
-# (uncomment if you plan to contribute)
-# black>=24.4
-# isort>=5.13
-# mypy>=1.9
-# pytest>=8.1
-# pytest-cov>=5.0
