--- a/RAG_Style/experiment_configs/oracle_retriever/A_Multi_llama_1.yaml
+++ b/RAG_Style/experiment_configs/oracle_retriever/A_Multi_llama_1.yaml
@@ -1,12 +1,11 @@
 # Reasoning Category: Arithmetic:arithmetic, World Knowledge:wknowledge, Temporal:temporal
 # Disource Type: Multi-speaker(forum style):multispeaker, Uni-speaker(chat style):unispeaker
 category: arithmetic
-
 discourse_type: multispeaker
 
 # Model (vLLM server)
 # The exact name of the model is in config file in the model_configs directory
-model_name: o4-mini-2025-04-16       # uses the vLLM‑API config
+model_name: llama_3.3_70b         # uses the vLLM‑API config
 model_configs_dir: RAG_Style/model_configs
 
 # Decoding / Eval
